# 3d-template-game

./: .gitignore  AI_README.md  CMakeLists.txt  README.md
src/: main.cpp
src/assets/levels/: AllLevels.h  Level1.h  Level2.h  Level3.h  Level_enemies.h  Level_varieties.h  Teste.h  level1.txt  level2.txt  level3.txt  level_enemies.txt  level_varieties.txt  order.cfg  teste.txt
src/assets/shaders/: simple_shader.vert
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h
src/renderer/: Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  vk_mem_alloc.cpp
tools/: level_manager.py  requirements.txt
tools/src/assets/levels/: Level1.h  level1.txt
